# mcil_evaluation_calvin

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.sh
mcil_evaluation_calvin/: mcil_eval.py  trainer.py
mcil_evaluation_calvin/configs/: mcil_evaluation.yaml
