[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcil_evaluation_calvin"]

[project]
name = "mcil_evaluation_calvin"
version = "0.1.0"
dependencies = [
"aiohappyeyeballs==2.4.4",
"aiohttp==3.10.11",
"aiosignal==1.3.1",
"annotated-types==0.7.0",
"antlr4-python3-runtime==4.8",
"async-timeout==5.0.1",
"attrs==25.2.0",
"av==12.3.0",
"certifi==2025.1.31",
"charset-normalizer==3.4.1",
"click==8.1.8",
clip @ git+https://github.com/openai/CLIP@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1,
"cloudpickle==3.1.1",
"cmake==3.31.6",
"colorlog==6.9.0",
"contourpy==1.1.1",
"cycler==0.12.1",
"decorator==4.4.2",
"docker-pycreds==0.4.0",
"eval_type_backport==0.2.2",
"filelock==3.16.1",
"fonttools==4.56.0",
"freetype-py==2.5.1",
"frozenlist==1.5.0",
"fsspec==2025.3.0",
"ftfy==6.2.3",
"gitdb==4.0.12",
"GitPython==3.1.44",
"gym==0.26.2",
"gym-notices==0.0.8",
"huggingface-hub==0.29.3",
"hydra-colorlog==1.2.0",
"hydra-core==1.1.1",
"idna==3.10",
"imageio==2.35.1",
"imageio-ffmpeg==0.5.1",
"importlib_metadata==8.5.0",
"importlib_resources==6.4.5",
"joblib==1.4.2",
"kiwisolver==1.4.7",
"lightning-lite==1.8.6",
"lightning-utilities==0.11.9",
"llvmlite==0.41.1",
"lxml==5.3.1",
"matplotlib==3.7.5",
"moviepy==1.0.3",
"multidict==6.1.0",
"narwhals==1.30.0",
"networkx==2.2",
"numba==0.58.1",
"numpy==1.22.0",
"numpy-quaternion==2023.0.4",
"nvidia-cublas-cu11==11.10.3.66",
"nvidia-cuda-nvrtc-cu11==11.7.99",
"nvidia-cuda-runtime-cu11==11.7.99",
"nvidia-cudnn-cu11==8.5.0.96",
"omegaconf==2.1.2",
"opencv-python==4.11.0.86",
"packaging==24.2",
"pandas==2.0.3",
"pillow==10.4.0",
"platformdirs==4.3.6",
"plotly==6.0.0",
"proglog==0.1.10",
"propcache==0.2.0",
"protobuf==5.29.3",
"psutil==7.0.0",
"pybullet==3.2.5",
"pycollada==0.6",
"pydantic==2.10.6",
"pydantic_core==2.27.2",
"pyglet==2.1.3",
"pyhash==0.9.3",
PyOpenGL @ git+https://github.com/mmatl/pyopengl.git@76d1261adee2d3fd99b418e75b0416bb7d2865e6,
"pyparsing==3.1.4",
"pyrender==0.1.45",
"python-dateutil==2.9.0.post0",
"pytorch-lightning==1.8.6",
"pytz==2025.1",
"PyYAML==6.0.2",
"regex==2024.11.6",
"requests==2.32.3",
"safetensors==0.5.3",
"scikit-learn==1.3.2",
"scipy==1.10.1",
"sentence-transformers==3.2.1",
"sentry-sdk==2.22.0",
"setproctitle==1.3.5",
"six==1.17.0",
"smmap==5.0.2",
"tensorboardX==2.6.2.2",
"termcolor==2.4.0",
"threadpoolctl==3.5.0",
"tokenizers==0.20.3",
"torch==1.13.1",
"torchmetrics==1.5.2",
"torchvision==0.14.1",
"tqdm==4.67.1",
"transformers==4.46.3",
"trimesh==4.6.4",
"typing_extensions==4.12.2",
"tzdata==2025.1",
"urdfpy==0.0.22",
"urllib3==2.2.3",
"wandb==0.19.8",
"wcwidth==0.2.13",
"yarl==1.15.2",
"zipp==3.20.2",
]
requires-python = ">=3.8"
[project.optional-dependencies]
dev = [
    "pre_commit==4.1.0"
]
